--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ Features</h1>
 Download</h1>
 <p >Download the latest release from <a href="https://github.com/Open-Typer/Open-Typer/releases/latest">GitHub</a> or <a href="https://sourceforge.net/projects/open-typer/">SourceForge</a>.</p>
 <h1><a class="anchor" id="autotoc_md8"></a>
-More information</h1>
-<p >Build instructions </p>
+Documentation</h1>
+<p >The documentation for Open-Typer can be found <a href="https://open-typer.github.io/Open-Typer">here</a>. </p>
 </div></div><!-- PageDoc -->
 </div><!-- contents -->
 </div><!-- doc-content -->
