--- a/inherits.html
+++ b/inherits.html
@@ -135,7 +135,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <tr><td><img src="inherit_graph_6.png" border="0" usemap="#aOpenTyper" alt=""/>
 <map name="aOpenTyper" id="aOpenTyper">
 <area shape="rect" title=" " alt="" coords="5,5,112,32"/>
-<area shape="rect" href="classOpenTyper.html" title=" " alt="" coords="160,5,245,32"/>
+<area shape="rect" href="classOpenTyper.html" title="The Open&#45;Typer class is the main window class. It shows the UI, text and handles input and output." alt="" coords="160,5,245,32"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_7.png" border="0" usemap="#aSimpleColorDialog" alt=""/>
@@ -143,7 +143,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" title=" " alt="" coords="5,183,73,209"/>
 <area shape="rect" href="classSimpleColorDialog.html" title=" " alt="" coords="121,5,249,32"/>
 <area shape="rect" href="classUpdaterDialog.html" title=" " alt="" coords="133,56,237,83"/>
-<area shape="rect" href="classlevelSummary.html" title=" " alt="" coords="133,107,237,133"/>
+<area shape="rect" href="classlevelSummary.html" title="A summary dialog window, which shows the exercise result." alt="" coords="133,107,237,133"/>
 <area shape="rect" href="classoptionsWindow.html" title=" " alt="" coords="130,157,241,184"/>
 <area shape="rect" href="classpackEditor.html" title=" " alt="" coords="144,208,227,235"/>
 <area shape="rect" href="classpackSelector.html" title=" " alt="" coords="136,259,235,285"/>
