deploy: 0ddb76359a7873daedd282a544fe0b6fba079995

--- a/inherits.html
+++ b/inherits.html
@@ -112,7 +112,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_2.png" border="0" usemap="#afileUtils" alt=""/>
 <map name="afileUtils" id="afileUtils">
-<area shape="rect" href="classfileUtils.html" title=" " alt="" coords="5,5,71,32"/>
+<area shape="rect" href="classfileUtils.html" title="The fileUtils class contains functions for file or directory paths." alt="" coords="5,5,71,32"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_3.png" border="0" usemap="#ainputLabelWidget" alt=""/>
