deploy: 5970186ad87ac5f15c3012f4dda6f5fc666b5a29

--- a/inherits.html
+++ b/inherits.html
@@ -118,7 +118,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <tr><td><img src="inherit_graph_3.png" border="0" usemap="#ainputLabelWidget" alt=""/>
 <map name="ainputLabelWidget" id="ainputLabelWidget">
 <area shape="rect" title=" " alt="" coords="5,5,84,32"/>
-<area shape="rect" href="classinputLabelWidget.html" title=" " alt="" coords="132,5,255,32"/>
+<area shape="rect" href="classinputLabelWidget.html" title="The inputLabelWidget class is a QTextEdit, which handles all key presses." alt="" coords="132,5,255,32"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_4.png" border="0" usemap="#akeyboardUtils" alt=""/>
