deploy: 0343029a52538e7de575f1f9684eb9095036d238

--- a/opentyper_8h_source.html
+++ b/opentyper_8h_source.html
@@ -247,7 +247,7 @@ $(document).ready(function(){initNavTree('opentyper_8h_source.html',''); initRes
 <div class="ttc" id="aclassOpenTyper_html_afd068c4fb723f3b7e8c8084ade8ddac1"><div class="ttname"><a href="classOpenTyper.html#afd068c4fb723f3b7e8c8084ade8ddac1">OpenTyper::openEditor</a></div><div class="ttdeci">void openEditor(void)</div><div class="ttdef"><b>Definition:</b> opentyper.cpp:1045</div></div>
 <div class="ttc" id="aclassUpdater_html"><div class="ttname"><a href="classUpdater.html">Updater</a></div><div class="ttdef"><b>Definition:</b> updater.h:37</div></div>
 <div class="ttc" id="aclassconfigParser_html"><div class="ttname"><a href="classconfigParser.html">configParser</a></div><div class="ttdef"><b>Definition:</b> configfile.h:31</div></div>
-<div class="ttc" id="aclasslanguageManager_html"><div class="ttname"><a href="classlanguageManager.html">languageManager</a></div><div class="ttdef"><b>Definition:</b> language.h:28</div></div>
+<div class="ttc" id="aclasslanguageManager_html"><div class="ttname"><a href="classlanguageManager.html">languageManager</a></div><div class="ttdoc">The languageManager class provides a list of supported languages.</div><div class="ttdef"><b>Definition:</b> language.h:40</div></div>
 </div><!-- fragment --></div><!-- contents -->
 </div><!-- doc-content -->
 <!-- start footer part -->
