--- a/classlanguageList.html
+++ b/classlanguageList.html
@@ -109,7 +109,7 @@ Collaboration diagram for languageList:</div>
 <map name="alanguageList_coll__map" id="alanguageList_coll__map">
 <area shape="rect" title=" " alt="" coords="49,171,145,197"/>
 <area shape="rect" title=" " alt="" coords="5,81,100,108"/>
-<area shape="rect" href="classlanguageManager.html" title=" " alt="" coords="124,81,248,108"/>
+<area shape="rect" href="classlanguageManager.html" title="The languageManager class provides a list of supported languages." alt="" coords="124,81,248,108"/>
 <area shape="rect" title=" " alt="" coords="151,5,221,32"/>
 </map>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
