deploy: c2ab3bbcb78b8b9aa1b9fbe54b8c3f934dd4b2f7

--- a/classpackView.html
+++ b/classpackView.html
@@ -109,7 +109,7 @@ Collaboration diagram for packView:</div>
 <map name="apackView_coll__map" id="apackView_coll__map">
 <area shape="rect" title=" " alt="" coords="23,171,102,197"/>
 <area shape="rect" title=" " alt="" coords="5,81,77,108"/>
-<area shape="rect" href="classconfigParser.html" title=" " alt="" coords="102,81,197,108"/>
+<area shape="rect" href="classconfigParser.html" title="The configParser class provides functions for the pack file format." alt="" coords="102,81,197,108"/>
 <area shape="rect" title=" " alt="" coords="114,5,185,32"/>
 </map>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
