--- a/inherits.html
+++ b/inherits.html
@@ -106,7 +106,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classNet.html" title=" " alt="" coords="165,56,207,83"/>
 <area shape="rect" href="classUpdater.html" title=" " alt="" coords="152,107,220,133"/>
 <area shape="rect" href="classbuiltinPacks.html" title=" " alt="" coords="139,157,233,184"/>
-<area shape="rect" href="classconfigParser.html" title=" " alt="" coords="139,208,233,235"/>
+<area shape="rect" href="classconfigParser.html" title="The configParser class provides functions for the pack file format." alt="" coords="139,208,233,235"/>
 <area shape="rect" href="classlanguageManager.html" title="The languageManager class provides a list of supported languages." alt="" coords="124,259,248,285"/>
 </map>
 </td></tr>
