--- a/opentyper_8h_source.html
+++ b/opentyper_8h_source.html
@@ -246,7 +246,7 @@ $(document).ready(function(){initNavTree('opentyper_8h_source.html',''); initRes
 <div class="ttc" id="aclassOpenTyper_html_afad7f5e20e15f749e3f22c189d56be2b"><div class="ttname"><a href="classOpenTyper.html#afad7f5e20e15f749e3f22c189d56be2b">OpenTyper::previousLevel</a></div><div class="ttdeci">void previousLevel(void)</div><div class="ttdef"><b>Definition:</b> opentyper.cpp:464</div></div>
 <div class="ttc" id="aclassOpenTyper_html_afd068c4fb723f3b7e8c8084ade8ddac1"><div class="ttname"><a href="classOpenTyper.html#afd068c4fb723f3b7e8c8084ade8ddac1">OpenTyper::openEditor</a></div><div class="ttdeci">void openEditor(void)</div><div class="ttdef"><b>Definition:</b> opentyper.cpp:1045</div></div>
 <div class="ttc" id="aclassUpdater_html"><div class="ttname"><a href="classUpdater.html">Updater</a></div><div class="ttdef"><b>Definition:</b> updater.h:37</div></div>
-<div class="ttc" id="aclassconfigParser_html"><div class="ttname"><a href="classconfigParser.html">configParser</a></div><div class="ttdef"><b>Definition:</b> configfile.h:31</div></div>
+<div class="ttc" id="aclassconfigParser_html"><div class="ttname"><a href="classconfigParser.html">configParser</a></div><div class="ttdoc">The configParser class provides functions for the pack file format.</div><div class="ttdef"><b>Definition:</b> configfile.h:49</div></div>
 <div class="ttc" id="aclasslanguageManager_html"><div class="ttname"><a href="classlanguageManager.html">languageManager</a></div><div class="ttdoc">The languageManager class provides a list of supported languages.</div><div class="ttdef"><b>Definition:</b> language.h:40</div></div>
 </div><!-- fragment --></div><!-- contents -->
 </div><!-- doc-content -->
