--- a/inherits.html
+++ b/inherits.html
@@ -144,7 +144,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classSimpleColorDialog.html" title=" " alt="" coords="121,5,249,32"/>
 <area shape="rect" href="classUpdaterDialog.html" title=" " alt="" coords="133,56,237,83"/>
 <area shape="rect" href="classlevelSummary.html" title="A summary dialog window, which shows the exercise result." alt="" coords="133,107,237,133"/>
-<area shape="rect" href="classoptionsWindow.html" title=" " alt="" coords="130,157,241,184"/>
+<area shape="rect" href="classoptionsWindow.html" title="The options window class shows program options." alt="" coords="130,157,241,184"/>
 <area shape="rect" href="classpackEditor.html" title=" " alt="" coords="144,208,227,235"/>
 <area shape="rect" href="classpackSelector.html" title=" " alt="" coords="136,259,235,285"/>
 <area shape="rect" href="classpaperConfigDialog.html" title="The paperConfigDialog class is a dialog, which asks for line length." alt="" coords="122,309,249,336"/>
