--- a/inherits.html
+++ b/inherits.html
@@ -129,7 +129,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <tr><td><img src="inherit_graph_5.png" border="0" usemap="#alanguageList" alt=""/>
 <map name="alanguageList" id="alanguageList">
 <area shape="rect" title=" " alt="" coords="5,5,100,32"/>
-<area shape="rect" href="classlanguageList.html" title=" " alt="" coords="148,5,244,32"/>
+<area shape="rect" href="classlanguageList.html" title="The languageList class is a QListWidget, which provides a language selector." alt="" coords="148,5,244,32"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_6.png" border="0" usemap="#aOpenTyper" alt=""/>
