deploy: 63dc726f187a9087b18ebc0d26c6f9c2332a8ab0

--- a/inherits.html
+++ b/inherits.html
@@ -93,7 +93,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <tr><td><img src="inherit_graph_0.png" border="0" usemap="#abehaviorOptions" alt=""/>
 <map name="abehaviorOptions" id="abehaviorOptions">
 <area shape="rect" title=" " alt="" coords="5,81,77,108"/>
-<area shape="rect" href="classbehaviorOptions.html" title=" " alt="" coords="141,5,257,32"/>
+<area shape="rect" href="classbehaviorOptions.html" title="The behaviorOptions class is the behavior category in the options." alt="" coords="141,5,257,32"/>
 <area shape="rect" href="classcustomizationOptions.html" title=" " alt="" coords="125,56,272,83"/>
 <area shape="rect" href="classkeyboardOptions.html" title=" " alt="" coords="139,107,258,133"/>
 <area shape="rect" href="classpackView.html" title=" " alt="" coords="159,157,238,184"/>
