deploy: 33dfdf9cdbab9ede4f3c0c377e6b048f644ed675

--- a/inherits.html
+++ b/inherits.html
@@ -105,7 +105,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classDownloader.html" title=" " alt="" coords="141,5,231,32"/>
 <area shape="rect" href="classNet.html" title=" " alt="" coords="165,56,207,83"/>
 <area shape="rect" href="classUpdater.html" title=" " alt="" coords="152,107,220,133"/>
-<area shape="rect" href="classbuiltinPacks.html" title=" " alt="" coords="139,157,233,184"/>
+<area shape="rect" href="classbuiltinPacks.html" title="The builtinPacks class provides functions for built&#45;in pack settings." alt="" coords="139,157,233,184"/>
 <area shape="rect" href="classconfigParser.html" title="The configParser class provides functions for the pack file format." alt="" coords="139,208,233,235"/>
 <area shape="rect" href="classlanguageManager.html" title="The languageManager class provides a list of supported languages." alt="" coords="124,259,248,285"/>
 </map>
