deploy: 1cdffb14b7e25a9a78327f0a350eba6e1fb5ebb9

--- a/classOpenTyper.html
+++ b/classOpenTyper.html
@@ -119,7 +119,7 @@ Collaboration diagram for OpenTyper:</div>
 <area shape="rect" title=" " alt="" coords="273,5,343,32"/>
 <area shape="rect" href="classconfigParser.html" title="The configParser class provides functions for the pack file format." alt="" coords="219,133,314,160"/>
 <area shape="rect" href="classUpdater.html" title=" " alt="" coords="322,185,390,212"/>
-<area shape="rect" href="classDownloader.html" title=" " alt="" coords="372,81,463,108"/>
+<area shape="rect" href="classDownloader.html" title="The downloader class provides functions for file downloading." alt="" coords="372,81,463,108"/>
 </map>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
