--- a/inherits.html
+++ b/inherits.html
@@ -102,7 +102,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <tr><td><img src="inherit_graph_1.png" border="0" usemap="#aDownloader" alt=""/>
 <map name="aDownloader" id="aDownloader">
 <area shape="rect" title=" " alt="" coords="5,132,76,159"/>
-<area shape="rect" href="classDownloader.html" title=" " alt="" coords="141,5,231,32"/>
+<area shape="rect" href="classDownloader.html" title="The downloader class provides functions for file downloading." alt="" coords="141,5,231,32"/>
 <area shape="rect" href="classNet.html" title=" " alt="" coords="165,56,207,83"/>
 <area shape="rect" href="classUpdater.html" title=" " alt="" coords="152,107,220,133"/>
 <area shape="rect" href="classbuiltinPacks.html" title="The builtinPacks class provides functions for built&#45;in pack settings." alt="" coords="139,157,233,184"/>
