--- a/classUpdater.html
+++ b/classUpdater.html
@@ -109,7 +109,7 @@ Collaboration diagram for Updater:</div>
 <map name="aUpdater_coll__map" id="aUpdater_coll__map">
 <area shape="rect" title=" " alt="" coords="12,185,80,212"/>
 <area shape="rect" title=" " alt="" coords="5,5,76,32"/>
-<area shape="rect" href="classDownloader.html" title=" " alt="" coords="62,81,153,108"/>
+<area shape="rect" href="classDownloader.html" title="The downloader class provides functions for file downloading." alt="" coords="62,81,153,108"/>
 </map>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
