--- a/index.html
+++ b/index.html
@@ -87,12 +87,14 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
   <div class="headertitle"><div class="title">Open-Typer </div></div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p ><a class="anchor" id="md_README"></a> </p>
-<h1><a class="anchor" id="autotoc_md5"></a>
-What is Open-Typer?</h1>
+<div class="textblock"><p ><a class="anchor" id="md_README"></a> <a href="https://github.com/Open-Typer/Open-Typer/actions/workflows/build.yml"><img src="https://github.com/Open-Typer/Open-Typer/actions/workflows/build.yml/badge.svg?branch=master" alt="Build" style="pointer-events: none;" class="inline"/></a></p>
+<h1><a class="anchor" id="autotoc_md4"></a>
+Open-Typer</h1>
+<h2><a class="anchor" id="autotoc_md5"></a>
+What is Open-Typer?</h2>
 <p >Open-Typer is a free and open source software for typewriting training and education. The following platforms are supported: Linux (amd64 and arm64), Windows (x86 - 32-bit).</p>
-<h1><a class="anchor" id="autotoc_md6"></a>
-Features</h1>
+<h2><a class="anchor" id="autotoc_md6"></a>
+Features</h2>
 <ul>
 <li>Packs with exercises divided into lessons.</li>
 <li>Every lesson consists of touch, word, sentence and text exercises.</li>
@@ -103,8 +105,8 @@ Features</h1>
 <li>Automatic updates on Windows (shows a dialog window when a new update is found).</li>
 <li>No installation required (might change in future).</li>
 </ul>
-<h1><a class="anchor" id="autotoc_md7"></a>
-Download</h1>
+<h2><a class="anchor" id="autotoc_md7"></a>
+Download</h2>
 <p >Download the latest release from <a href="https://github.com/Open-Typer/Open-Typer/releases/latest">GitHub</a> or <a href="https://sourceforge.net/projects/open-typer/">SourceForge</a>.</p>
 <h1><a class="anchor" id="autotoc_md8"></a>
 Documentation</h1>
