deploy: b3d4c192184b6c580737bdd641ea07c5853153a2

--- a/inherits.html
+++ b/inherits.html
@@ -123,7 +123,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_4.png" border="0" usemap="#akeyboardUtils" alt=""/>
 <map name="akeyboardUtils" id="akeyboardUtils">
-<area shape="rect" href="classkeyboardUtils.html" title=" " alt="" coords="5,5,107,32"/>
+<area shape="rect" href="classkeyboardUtils.html" title="The keyboardUtils class provides functions related to keyboard and input method." alt="" coords="5,5,107,32"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_5.png" border="0" usemap="#alanguageList" alt=""/>
