--- a/inherits.html
+++ b/inherits.html
@@ -96,14 +96,14 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classbehaviorOptions.html" title="The behaviorOptions class is the behavior category in the options." alt="" coords="141,5,257,32"/>
 <area shape="rect" href="classcustomizationOptions.html" title="The customizationOptions class is the customization category in the options." alt="" coords="125,56,272,83"/>
 <area shape="rect" href="classkeyboardOptions.html" title="The keyboardOptions class is the keyboard category in the options." alt="" coords="139,107,258,133"/>
-<area shape="rect" href="classpackView.html" title=" " alt="" coords="159,157,238,184"/>
+<area shape="rect" href="classpackView.html" title="The packView class is the core part of the pack editor." alt="" coords="159,157,238,184"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_1.png" border="0" usemap="#aDownloader" alt=""/>
 <map name="aDownloader" id="aDownloader">
 <area shape="rect" title=" " alt="" coords="5,132,76,159"/>
 <area shape="rect" href="classDownloader.html" title="The downloader class provides functions for file downloading." alt="" coords="141,5,231,32"/>
-<area shape="rect" href="classNet.html" title=" " alt="" coords="165,56,207,83"/>
+<area shape="rect" href="classNet.html" title="The Net class provides network functions." alt="" coords="165,56,207,83"/>
 <area shape="rect" href="classUpdater.html" title=" " alt="" coords="152,107,220,133"/>
 <area shape="rect" href="classbuiltinPacks.html" title="The builtinPacks class provides functions for built&#45;in pack settings." alt="" coords="139,157,233,184"/>
 <area shape="rect" href="classconfigParser.html" title="The configParser class provides functions for the pack file format." alt="" coords="139,208,233,235"/>
@@ -145,8 +145,8 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classUpdaterDialog.html" title=" " alt="" coords="133,56,237,83"/>
 <area shape="rect" href="classlevelSummary.html" title="A summary dialog window, which shows the exercise result." alt="" coords="133,107,237,133"/>
 <area shape="rect" href="classoptionsWindow.html" title="The options window class shows program options." alt="" coords="130,157,241,184"/>
-<area shape="rect" href="classpackEditor.html" title=" " alt="" coords="144,208,227,235"/>
-<area shape="rect" href="classpackSelector.html" title=" " alt="" coords="136,259,235,285"/>
+<area shape="rect" href="classpackEditor.html" title="The packEditor class is the pack editor window." alt="" coords="144,208,227,235"/>
+<area shape="rect" href="classpackSelector.html" title="The packSelector class is a QDialog, which allows the user to select a built&#45;in pack." alt="" coords="136,259,235,285"/>
 <area shape="rect" href="classpaperConfigDialog.html" title="The paperConfigDialog class is a dialog, which asks for line length." alt="" coords="122,309,249,336"/>
 <area shape="rect" href="classtimeDialog.html" title=" " alt="" coords="144,360,227,387"/>
 </map>
