deploy: cb7ebd721cebcca1f99baaadb41a2740d43fca04

--- a/classlevelSummary.html
+++ b/classlevelSummary.html
@@ -141,7 +141,8 @@ Ui::levelSummary *&#160;</td><td class="memItemRight" valign="bottom"><b>ui</b><
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p >A summary dialog window, which shows the exercise result. </p>
 <p >Each value can be set using the functions.<br  />
-They're all optional and unset values will be hidden. <code>AlignLeft</code> </p><div class="image">
+They're all optional and unset values will be hidden.</p>
+<div class="image">
 <img src="levelSummary.png" alt=""/>
 </div>
 <p >The dialog supports 2 modes.<br  />
