deploy: bb67945601b6980b61c4a9f8b05b7cf5239e9dc7

--- a/inherits.html
+++ b/inherits.html
@@ -141,19 +141,19 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <tr><td><img src="inherit_graph_7.png" border="0" usemap="#aSimpleColorDialog" alt=""/>
 <map name="aSimpleColorDialog" id="aSimpleColorDialog">
 <area shape="rect" title=" " alt="" coords="5,183,73,209"/>
-<area shape="rect" href="classSimpleColorDialog.html" title=" " alt="" coords="121,5,249,32"/>
+<area shape="rect" href="classSimpleColorDialog.html" title="The SimpleColorDialog class is a simple color picker." alt="" coords="121,5,249,32"/>
 <area shape="rect" href="classUpdaterDialog.html" title=" " alt="" coords="133,56,237,83"/>
 <area shape="rect" href="classlevelSummary.html" title="A summary dialog window, which shows the exercise result." alt="" coords="133,107,237,133"/>
 <area shape="rect" href="classoptionsWindow.html" title="The options window class shows program options." alt="" coords="130,157,241,184"/>
 <area shape="rect" href="classpackEditor.html" title="The packEditor class is the pack editor window." alt="" coords="144,208,227,235"/>
 <area shape="rect" href="classpackSelector.html" title="The packSelector class is a QDialog, which allows the user to select a built&#45;in pack." alt="" coords="136,259,235,285"/>
 <area shape="rect" href="classpaperConfigDialog.html" title="The paperConfigDialog class is a dialog, which asks for line length." alt="" coords="122,309,249,336"/>
-<area shape="rect" href="classtimeDialog.html" title=" " alt="" coords="144,360,227,387"/>
+<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="144,360,227,387"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_8.png" border="0" usemap="#astringUtils" alt=""/>
 <map name="astringUtils" id="astringUtils">
-<area shape="rect" href="classstringUtils.html" title=" " alt="" coords="5,5,87,32"/>
+<area shape="rect" href="classstringUtils.html" title="The stringUtils class contains functions related to strings." alt="" coords="5,5,87,32"/>
 </map>
 </td></tr>
 </table>
