deploy: fb75b8a345ed24b3f7431de8f8dca739b076b4ea

--- a/inherits.html
+++ b/inherits.html
@@ -104,7 +104,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" title=" " alt="" coords="5,132,76,159"/>
 <area shape="rect" href="classDownloader.html" title="The downloader class provides functions for file downloading." alt="" coords="141,5,231,32"/>
 <area shape="rect" href="classNet.html" title="The Net class provides network functions." alt="" coords="165,56,207,83"/>
-<area shape="rect" href="classUpdater.html" title=" " alt="" coords="152,107,220,133"/>
+<area shape="rect" href="classUpdater.html" title="The Updater class is used to check for updates and download new versions of the program." alt="" coords="152,107,220,133"/>
 <area shape="rect" href="classbuiltinPacks.html" title="The builtinPacks class provides functions for built&#45;in pack settings." alt="" coords="139,157,233,184"/>
 <area shape="rect" href="classconfigParser.html" title="The configParser class provides functions for the pack file format." alt="" coords="139,208,233,235"/>
 <area shape="rect" href="classlanguageManager.html" title="The languageManager class provides a list of supported languages." alt="" coords="124,259,248,285"/>
@@ -142,7 +142,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <map name="aSimpleColorDialog" id="aSimpleColorDialog">
 <area shape="rect" title=" " alt="" coords="5,183,73,209"/>
 <area shape="rect" href="classSimpleColorDialog.html" title="The SimpleColorDialog class is a simple color picker." alt="" coords="121,5,249,32"/>
-<area shape="rect" href="classUpdaterDialog.html" title=" " alt="" coords="133,56,237,83"/>
+<area shape="rect" href="classUpdaterDialog.html" title="The UpdaterDialog class is a dialog used for program updates." alt="" coords="133,56,237,83"/>
 <area shape="rect" href="classlevelSummary.html" title="A summary dialog window, which shows the exercise result." alt="" coords="133,107,237,133"/>
 <area shape="rect" href="classoptionsWindow.html" title="The options window class shows program options." alt="" coords="130,157,241,184"/>
 <area shape="rect" href="classpackEditor.html" title="The packEditor class is the pack editor window." alt="" coords="144,208,227,235"/>
