--- a/classOpenTyper.html
+++ b/classOpenTyper.html
@@ -118,7 +118,7 @@ Collaboration diagram for OpenTyper:</div>
 <area shape="rect" href="classlanguageManager.html" title="The languageManager class provides a list of supported languages." alt="" coords="89,133,213,160"/>
 <area shape="rect" title=" " alt="" coords="273,5,343,32"/>
 <area shape="rect" href="classconfigParser.html" title="The configParser class provides functions for the pack file format." alt="" coords="219,133,314,160"/>
-<area shape="rect" href="classUpdater.html" title=" " alt="" coords="322,185,390,212"/>
+<area shape="rect" href="classUpdater.html" title="The Updater class is used to check for updates and download new versions of the program." alt="" coords="322,185,390,212"/>
 <area shape="rect" href="classDownloader.html" title="The downloader class provides functions for file downloading." alt="" coords="372,81,463,108"/>
 </map>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
