--- a/index.html
+++ b/index.html
@@ -95,14 +95,18 @@ Features</h1>
 <li>Every lesson consists of touch, word, sentence and text exercises.</li>
 <li>Pack editor - allows anyone to create their own packs with lessons.</li>
 <li>Custom exercise (from a text file).</li>
+<li>Timed exercises.</li>
 <li>Multiple languages (still growing).</li>
-<li>Customization (text font and size; colors; dark theme).</li>
+<li>Customization (text font and size; colors; dark theme; view mode).</li>
 <li>Automatic updates on Windows (shows a dialog window when a new update is found).</li>
-<li>No installation required (might change in future).</li>
+<li>No installation required (will change in v2.2).</li>
 </ul>
 <h1><a class="anchor" id="autotoc_md6"></a>
 Download</h1>
-<p >Download the latest release from <a href="https://github.com/Open-Typer/Open-Typer/releases/latest">GitHub</a> or <a href="https://sourceforge.net/projects/open-typer/">SourceForge</a>. </p>
+<p >Download the latest release from <a href="https://github.com/Open-Typer/Open-Typer/releases/latest">GitHub</a> or <a href="https://sourceforge.net/projects/open-typer/">SourceForge</a>.</p>
+<h1><a class="anchor" id="autotoc_md7"></a>
+Screenshots</h1>
+<p ><img src="main_window_light.png" alt="" class="inline" title="Main window (light)"/> <img src="main_window_system_dark.png" alt="" class="inline" title="Main window (system dark)"/> <img src="pack_editor_system_dark.png" alt="" class="inline" title="Pack editor"/> <img src="optionsWindow.png" alt="" class="inline" title="Options"/> </p>
 </div></div><!-- PageDoc -->
 </div><!-- contents -->
 </div><!-- doc-content -->
