--- a/inherits.html
+++ b/inherits.html
@@ -142,7 +142,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_7.png" border="0" usemap="#aSimpleColorDialog" alt=""/>
 <map name="aSimpleColorDialog" id="aSimpleColorDialog">
-<area shape="rect" title=" " alt="" coords="5,208,73,235"/>
+<area shape="rect" title=" " alt="" coords="5,233,73,260"/>
 <area shape="rect" href="classSimpleColorDialog.html" title="The SimpleColorDialog class is a simple color picker." alt="" coords="121,5,249,32"/>
 <area shape="rect" href="classUpdaterDialog.html" title="The UpdaterDialog class is a dialog used for program updates." alt="" coords="133,56,237,83"/>
 <area shape="rect" href="classlevelSummary.html" title="A summary dialog window, which shows the exercise result." alt="" coords="133,107,237,133"/>
@@ -150,8 +150,9 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classpackEditor.html" title="The packEditor class is the pack editor window." alt="" coords="144,208,227,235"/>
 <area shape="rect" href="classpackSelector.html" title="The packSelector class is a QDialog, which allows the user to select a built&#45;in pack." alt="" coords="136,259,235,285"/>
 <area shape="rect" href="classpaperConfigDialog.html" title="The paperConfigDialog class is a dialog, which asks for line length." alt="" coords="122,309,249,336"/>
-<area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="130,360,241,387"/>
-<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="144,411,227,437"/>
+<area shape="rect" href="classstatsDialog.html" title="The statsDialog class is a dialog, which shows exercise history." alt="" coords="142,360,229,387"/>
+<area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="130,411,241,437"/>
+<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="144,461,227,488"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_8.png" border="0" usemap="#astringUtils" alt=""/>
