deploy: 4449cbad3b46c34632a9405a83de80a5ad50b7d8

--- a/inherits.html
+++ b/inherits.html
@@ -102,14 +102,15 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_1.png" border="0" usemap="#aDownloader" alt=""/>
 <map name="aDownloader" id="aDownloader">
-<area shape="rect" title=" " alt="" coords="5,157,76,184"/>
+<area shape="rect" title=" " alt="" coords="5,183,76,209"/>
 <area shape="rect" href="classDownloader.html" title="The downloader class provides functions for file downloading." alt="" coords="141,5,231,32"/>
 <area shape="rect" href="classNet.html" title="The Net class provides network functions." alt="" coords="165,56,207,83"/>
 <area shape="rect" href="classUpdater.html" title="The Updater class is used to check for updates and download new versions of the program." alt="" coords="152,107,220,133"/>
 <area shape="rect" href="classbuiltinPacks.html" title="The builtinPacks class provides functions for built&#45;in pack settings." alt="" coords="139,157,233,184"/>
 <area shape="rect" href="classconfigParser.html" title="The configParser class provides functions for the pack file format." alt="" coords="139,208,233,235"/>
-<area shape="rect" href="classlanguageManager.html" title="The languageManager class provides a list of supported languages." alt="" coords="124,259,248,285"/>
-<area shape="rect" href="classmonitorClient.html" title="The monitorClient class is used to communicate with the class monitor server." alt="" coords="137,309,235,336"/>
+<area shape="rect" href="classhistoryParser.html" title="The historyParser class provides functions for exercise history and statistics." alt="" coords="137,259,235,285"/>
+<area shape="rect" href="classlanguageManager.html" title="The languageManager class provides a list of supported languages." alt="" coords="124,309,248,336"/>
+<area shape="rect" href="classmonitorClient.html" title="The monitorClient class is used to communicate with the class monitor server." alt="" coords="137,360,235,387"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_2.png" border="0" usemap="#afileUtils" alt=""/>
