deploy: 3fda61c7ed9d7b733765c3a142451ca49f32388d

--- a/inherits.html
+++ b/inherits.html
@@ -116,19 +116,25 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classkeyboardUtils.html" title="The keyboardUtils class provides functions related to keyboard and input method." alt="" coords="5,5,107,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_4.png" border="0" usemap="#alanguageList" alt=""/>
+<tr><td><img src="inherit_graph_4.png" border="0" usemap="#akeyboardWidget" alt=""/>
+<map name="akeyboardWidget" id="akeyboardWidget">
+<area shape="rect" title=" " alt="" coords="5,5,75,32"/>
+<area shape="rect" href="classkeyboardWidget.html" title="The keyboardWidget class provides a simple virtual keyboard widget." alt="" coords="123,5,237,32"/>
+</map>
+</td></tr>
+<tr><td><img src="inherit_graph_5.png" border="0" usemap="#alanguageList" alt=""/>
 <map name="alanguageList" id="alanguageList">
 <area shape="rect" title=" " alt="" coords="5,5,100,32"/>
 <area shape="rect" href="classlanguageList.html" title="The languageList class is a QListWidget, which provides a language selector." alt="" coords="148,5,244,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_5.png" border="0" usemap="#aOpenTyper" alt=""/>
+<tr><td><img src="inherit_graph_6.png" border="0" usemap="#aOpenTyper" alt=""/>
 <map name="aOpenTyper" id="aOpenTyper">
 <area shape="rect" title=" " alt="" coords="5,5,112,32"/>
 <area shape="rect" href="classOpenTyper.html" title="The OpenTyper class is the main window class. It shows the UI, text and handles input and output." alt="" coords="160,5,245,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_6.png" border="0" usemap="#aSimpleColorDialog" alt=""/>
+<tr><td><img src="inherit_graph_7.png" border="0" usemap="#aSimpleColorDialog" alt=""/>
 <map name="aSimpleColorDialog" id="aSimpleColorDialog">
 <area shape="rect" title=" " alt="" coords="5,233,73,260"/>
 <area shape="rect" href="classSimpleColorDialog.html" title="The SimpleColorDialog class is a simple color picker." alt="" coords="121,5,249,32"/>
@@ -143,12 +149,12 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="144,461,227,488"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_7.png" border="0" usemap="#astringUtils" alt=""/>
+<tr><td><img src="inherit_graph_8.png" border="0" usemap="#astringUtils" alt=""/>
 <map name="astringUtils" id="astringUtils">
 <area shape="rect" href="classstringUtils.html" title="The stringUtils class contains functions related to strings." alt="" coords="5,5,87,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_8.png" border="0" usemap="#aUpdater" alt=""/>
+<tr><td><img src="inherit_graph_9.png" border="0" usemap="#aUpdater" alt=""/>
 <map name="aUpdater" id="aUpdater">
 <area shape="rect" title=" " alt="" coords="5,132,76,159"/>
 <area shape="rect" href="classUpdater.html" title="The Updater class is used to check for updates and download new versions of the program." alt="" coords="152,5,220,32"/>
