deploy: 6369dbb635b734f7e57b4a3824902c58f5150db7

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ Features</h1>
 <li>Custom exercise (from a text file).</li>
 <li>Timed exercises.</li>
 <li>Multiple languages (still growing).</li>
-<li>Customization (text font and size; colors; dark theme; view mode).</li>
+<li>Customization (text font and size; colors; dark theme).</li>
 <li>Automatic updates on Windows (shows a dialog window when a new update is found).</li>
-<li>No installation required (will change in v2.2).</li>
+<li>Can be used with Open-Typer Class Monitor to save student results on one computer.</li>
 </ul>
 <h1><a class="anchor" id="autotoc_md3"></a>
 Download</h1>
