deploy: 50b855d6d81116c7f85f2cd6cdb6849d6e841cb7

--- a/classpackEditor.html
+++ b/classpackEditor.html
@@ -422,7 +422,7 @@ Opens a new file tab. </p><dl class="section see"><dt>See also</dt><dd><a class=
         </tr>
       </table>
 </div><div class="memdoc">
-<p >Applies settings. Must be run before exec() or show(). </p>
+<p >Applies settings. Must be run before showing the window. </p>
 
 </div>
 </div>
