--- a/inherits.html
+++ b/inherits.html
@@ -136,13 +136,14 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_6.png" border="0" usemap="#aQObject" alt=""/>
 <map name="aQObject" id="aQObject">
-<area shape="rect" title=" " alt="" coords="5,132,76,159"/>
+<area shape="rect" title=" " alt="" coords="5,157,76,184"/>
 <area shape="rect" href="classUpdater.html" title="The Updater class is used to check for updates and download new versions of the program." alt="" coords="152,5,220,32"/>
 <area shape="rect" href="classbuiltinPacks.html" title="The builtinPacks class provides functions for built&#45;in pack settings." alt="" coords="139,56,233,83"/>
 <area shape="rect" href="classconfigParser.html" title="The configParser class provides functions for the pack file format." alt="" coords="139,107,233,133"/>
 <area shape="rect" href="classhistoryParser.html" title="The historyParser class provides functions for exercise history and statistics." alt="" coords="137,157,235,184"/>
 <area shape="rect" href="classlanguageManager.html" title="The languageManager class provides a list of supported languages." alt="" coords="124,208,248,235"/>
 <area shape="rect" href="classmonitorClient.html" title="The monitorClient class is used to communicate with the class monitor server." alt="" coords="137,259,235,285"/>
+<area shape="rect" href="classthemeEngine.html" title="The themeEngine class provides theme functions." alt="" coords="137,309,235,336"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_7.png" border="0" usemap="#aQTextEdit" alt=""/>
