--- a/inherits.html
+++ b/inherits.html
@@ -149,7 +149,8 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <tr><td><img src="inherit_graph_7.png" border="0" usemap="#aQTextEdit" alt=""/>
 <map name="aQTextEdit" id="aQTextEdit">
 <area shape="rect" title=" " alt="" coords="5,5,84,32"/>
-<area shape="rect" href="classinputLabelWidget.html" title="The inputLabelWidget class is a QTextEdit, which handles all key presses." alt="" coords="132,5,255,32"/>
+<area shape="rect" href="classtextView.html" title="The textView class is a QTextEdit used to display text." alt="" coords="132,5,204,32"/>
+<area shape="rect" href="classinputLabelWidget.html" title="The inputLabelWidget class is a textView, which handles all key presses." alt="" coords="252,5,375,32"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_8.png" border="0" usemap="#aQWidget" alt=""/>
