deploy: 7e62fb608f5afbfd07b25090a94e51d59d1c9ed2

--- a/inherits.html
+++ b/inherits.html
@@ -102,18 +102,19 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_2.png" border="0" usemap="#aQDialog" alt=""/>
 <map name="aQDialog" id="aQDialog">
-<area shape="rect" title=" " alt="" coords="5,259,73,285"/>
+<area shape="rect" title=" " alt="" coords="5,284,73,311"/>
 <area shape="rect" href="classUpdaterDialog.html" title="The UpdaterDialog class is a dialog used for program updates." alt="" coords="133,5,237,32"/>
-<area shape="rect" href="classexportDialog.html" title="The exportDialog class is a dialog for typewriting result exports." alt="" coords="138,56,231,83"/>
-<area shape="rect" href="classinitialSetup.html" title="The initialSetup class is a dialog for initial program configuration." alt="" coords="141,107,228,133"/>
-<area shape="rect" href="classlevelSummary.html" title="A summary dialog window, which shows the exercise result." alt="" coords="133,157,237,184"/>
-<area shape="rect" href="classoptionsWindow.html" title="The options window class shows program options." alt="" coords="129,208,240,235"/>
-<area shape="rect" href="classpackEditor.html" title="The packEditor class is the pack editor window." alt="" coords="143,259,226,285"/>
-<area shape="rect" href="classpackSelector.html" title="The packSelector class is a QDialog, which allows the user to select a built&#45;in pack." alt="" coords="135,309,234,336"/>
-<area shape="rect" href="classpaperConfigDialog.html" title="The paperConfigDialog class is a dialog, which asks for exercise configuration." alt="" coords="121,360,248,387"/>
-<area shape="rect" href="classstatsDialog.html" title="The statsDialog class is a dialog, which shows exercise history." alt="" coords="141,411,228,437"/>
-<area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="129,461,240,488"/>
-<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="143,512,226,539"/>
+<area shape="rect" href="classadminSelector.html" title="The adminSelector class is a dialog used to select an administrator account." alt="" coords="132,56,237,83"/>
+<area shape="rect" href="classexportDialog.html" title="The exportDialog class is a dialog for typewriting result exports." alt="" coords="138,107,231,133"/>
+<area shape="rect" href="classinitialSetup.html" title="The initialSetup class is a dialog for initial program configuration." alt="" coords="141,157,228,184"/>
+<area shape="rect" href="classlevelSummary.html" title="A summary dialog window, which shows the exercise result." alt="" coords="133,208,237,235"/>
+<area shape="rect" href="classoptionsWindow.html" title="The options window class shows program options." alt="" coords="129,259,240,285"/>
+<area shape="rect" href="classpackEditor.html" title="The packEditor class is the pack editor window." alt="" coords="143,309,226,336"/>
+<area shape="rect" href="classpackSelector.html" title="The packSelector class is a QDialog, which allows the user to select a built&#45;in pack." alt="" coords="135,360,234,387"/>
+<area shape="rect" href="classpaperConfigDialog.html" title="The paperConfigDialog class is a dialog, which asks for exercise configuration." alt="" coords="121,411,248,437"/>
+<area shape="rect" href="classstatsDialog.html" title="The statsDialog class is a dialog, which shows exercise history." alt="" coords="141,461,228,488"/>
+<area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="129,512,240,539"/>
+<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="143,563,226,589"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_3.png" border="0" usemap="#aQFrame" alt=""/>
