deploy: 540f50c2d9d0a7fa68857f6bcf15b171534f47cb

--- a/inherits.html
+++ b/inherits.html
@@ -102,7 +102,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_2.png" border="0" usemap="#aQDialog" alt=""/>
 <map name="aQDialog" id="aQDialog">
-<area shape="rect" title=" " alt="" coords="5,309,73,336"/>
+<area shape="rect" title=" " alt="" coords="5,335,73,361"/>
 <area shape="rect" href="classUpdaterDialog.html" title="The UpdaterDialog class is a dialog used for program updates." alt="" coords="133,5,237,32"/>
 <area shape="rect" href="classadminSelector.html" title="The adminSelector class is a dialog used to select an administrator account." alt="" coords="132,56,237,83"/>
 <area shape="rect" href="classclassEdit.html" title="The classEdit class is a dialog for class adding and editing." alt="" coords="147,107,222,133"/>
@@ -113,9 +113,10 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classpackEditor.html" title="The packEditor class is the pack editor window." alt="" coords="143,360,226,387"/>
 <area shape="rect" href="classpackSelector.html" title="The packSelector class is a QDialog, which allows the user to select a built&#45;in pack." alt="" coords="135,411,234,437"/>
 <area shape="rect" href="classpaperConfigDialog.html" title="The paperConfigDialog class is a dialog, which asks for exercise configuration." alt="" coords="121,461,248,488"/>
-<area shape="rect" href="classstatsDialog.html" title="The statsDialog class is a dialog, which shows exercise history." alt="" coords="141,512,228,539"/>
-<area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="129,563,240,589"/>
-<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="143,613,226,640"/>
+<area shape="rect" href="classserverSetup.html" title="The serverSetup class is a dialog for initial server setup." alt="" coords="139,512,231,539"/>
+<area shape="rect" href="classstatsDialog.html" title="The statsDialog class is a dialog, which shows exercise history." alt="" coords="141,563,228,589"/>
+<area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="129,613,240,640"/>
+<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="143,664,226,691"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_3.png" border="0" usemap="#aQFrame" alt=""/>
