--- a/inherits.html
+++ b/inherits.html
@@ -102,7 +102,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_2.png" border="0" usemap="#aQDialog" alt=""/>
 <map name="aQDialog" id="aQDialog">
-<area shape="rect" title=" " alt="" coords="5,335,73,361"/>
+<area shape="rect" title=" " alt="" coords="5,360,73,387"/>
 <area shape="rect" href="classUpdaterDialog.html" title="The UpdaterDialog class is a dialog used for program updates." alt="" coords="133,5,237,32"/>
 <area shape="rect" href="classadminSelector.html" title="The adminSelector class is a dialog used to select an administrator account." alt="" coords="132,56,237,83"/>
 <area shape="rect" href="classclassEdit.html" title="The classEdit class is a dialog for class adding and editing." alt="" coords="147,107,222,133"/>
@@ -115,8 +115,9 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classpaperConfigDialog.html" title="The paperConfigDialog class is a dialog, which asks for exercise configuration." alt="" coords="121,461,248,488"/>
 <area shape="rect" href="classserverSetup.html" title="The serverSetup class is a dialog for initial server setup." alt="" coords="139,512,231,539"/>
 <area shape="rect" href="classstatsDialog.html" title="The statsDialog class is a dialog, which shows exercise history." alt="" coords="141,563,228,589"/>
-<area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="129,613,240,640"/>
-<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="143,664,226,691"/>
+<area shape="rect" href="classstudentEdit.html" title="The studentEdit class is a dialog used to add or edit students." alt="" coords="141,613,228,640"/>
+<area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="129,664,240,691"/>
+<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="143,715,226,741"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_3.png" border="0" usemap="#aQFrame" alt=""/>
