deploy: c9480e76fb75f890d6942122048b3622bac3385e

--- a/inherits.html
+++ b/inherits.html
@@ -102,7 +102,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_2.png" border="0" usemap="#aQDialog" alt=""/>
 <map name="aQDialog" id="aQDialog">
-<area shape="rect" title=" " alt="" coords="5,385,73,412"/>
+<area shape="rect" title=" " alt="" coords="5,411,73,437"/>
 <area shape="rect" href="classUpdaterDialog.html" title="The UpdaterDialog class is a dialog used for program updates." alt="" coords="133,5,237,32"/>
 <area shape="rect" href="classadminSelector.html" title="The adminSelector class is a dialog used to select an administrator account." alt="" coords="132,56,237,83"/>
 <area shape="rect" href="classclassEdit.html" title="The classEdit class is a dialog for class adding and editing." alt="" coords="147,107,222,133"/>
@@ -119,6 +119,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="129,664,240,691"/>
 <area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="143,715,226,741"/>
 <area shape="rect" href="classuserEdit.html" title="the userEdit class is a dialog used to add or edit users." alt="" coords="150,765,219,792"/>
+<area shape="rect" href="classuserManager.html" title="the userManager class is a widget for user management, used by MonitorWindow." alt="" coords="136,816,233,843"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_3.png" border="0" usemap="#aQFrame" alt=""/>
