--- a/inherits.html
+++ b/inherits.html
@@ -162,14 +162,15 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_8.png" border="0" usemap="#aQWidget" alt=""/>
 <map name="aQWidget" id="aQWidget">
-<area shape="rect" title=" " alt="" coords="5,157,77,184"/>
+<area shape="rect" title=" " alt="" coords="5,183,77,209"/>
 <area shape="rect" href="classbehaviorOptions.html" title="The behaviorOptions class is the behavior category in the options." alt="" coords="141,5,257,32"/>
 <area shape="rect" href="classclassControls.html" title="The classControls class is a widget for class management, used by MonitorWindow." alt="" coords="148,56,249,83"/>
 <area shape="rect" href="classconnectionOptions.html" title="The connectionOptions class is the connection category in the options." alt="" coords="133,107,264,133"/>
 <area shape="rect" href="classcustomizationOptions.html" title="The customizationOptions class is the customization category in the options." alt="" coords="125,157,272,184"/>
 <area shape="rect" href="classkeyboardOptions.html" title="The keyboardOptions class is the keyboard category in the options." alt="" coords="139,208,258,235"/>
 <area shape="rect" href="classpackView.html" title="The packView class is the core part of the pack editor." alt="" coords="159,259,238,285"/>
-<area shape="rect" href="classstudentDetails.html" title="The studentDetails class is a widget for student results and statistics, used by MonitorWindow." alt="" coords="146,309,251,336"/>
+<area shape="rect" href="classserverManager.html" title="The serverManager class is a widget that can be used as a server control panel." alt="" coords="145,309,253,336"/>
+<area shape="rect" href="classstudentDetails.html" title="The studentDetails class is a widget for student results and statistics, used by MonitorWindow." alt="" coords="146,360,251,387"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_9.png" border="0" usemap="#astringUtils" alt=""/>
