deploy: d73bdd0ab413faf75efca4dbaecd3bb9342ed5f7

--- a/inherits.html
+++ b/inherits.html
@@ -119,7 +119,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="129,664,240,691"/>
 <area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="143,715,226,741"/>
 <area shape="rect" href="classuserEdit.html" title="the userEdit class is a dialog used to add or edit users." alt="" coords="150,765,219,792"/>
-<area shape="rect" href="classuserManager.html" title="the userManager class is a widget for user management, used by MonitorWindow." alt="" coords="136,816,233,843"/>
+<area shape="rect" href="classuserManager.html" title="the userManager class is a widget for user management." alt="" coords="136,816,233,843"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_3.png" border="0" usemap="#aQFrame" alt=""/>
@@ -164,13 +164,13 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <map name="aQWidget" id="aQWidget">
 <area shape="rect" title=" " alt="" coords="5,183,77,209"/>
 <area shape="rect" href="classbehaviorOptions.html" title="The behaviorOptions class is the behavior category in the options." alt="" coords="141,5,257,32"/>
-<area shape="rect" href="classclassControls.html" title="The classControls class is a widget for class management, used by MonitorWindow." alt="" coords="148,56,249,83"/>
+<area shape="rect" href="classclassControls.html" title="The classControls class is a widget for class management." alt="" coords="148,56,249,83"/>
 <area shape="rect" href="classconnectionOptions.html" title="The connectionOptions class is the connection category in the options." alt="" coords="133,107,264,133"/>
 <area shape="rect" href="classcustomizationOptions.html" title="The customizationOptions class is the customization category in the options." alt="" coords="125,157,272,184"/>
 <area shape="rect" href="classkeyboardOptions.html" title="The keyboardOptions class is the keyboard category in the options." alt="" coords="139,208,258,235"/>
 <area shape="rect" href="classpackView.html" title="The packView class is the core part of the pack editor." alt="" coords="159,259,238,285"/>
 <area shape="rect" href="classserverManager.html" title="The serverManager class is a widget that can be used as a server control panel." alt="" coords="145,309,253,336"/>
-<area shape="rect" href="classstudentDetails.html" title="The studentDetails class is a widget for student results and statistics, used by MonitorWindow." alt="" coords="146,360,251,387"/>
+<area shape="rect" href="classstudentDetails.html" title="The studentDetails class is a widget for student results and statistics." alt="" coords="146,360,251,387"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_9.png" border="0" usemap="#astringUtils" alt=""/>
